--- a/app/view/sellMobileLogin.ejs
+++ b/app/view/sellMobileLogin.ejs
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>折试试 | Reg</title>
 <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
+<link rel="stylesheet" href="/public/css/Adminlte.min.css">
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
