--- a/app/view/sellfinance.ejs
+++ b/app/view/sellfinance.ejs
@@ -7,7 +7,10 @@
     <title>试用平台 | 发布产品</title>
     <!-- Tell the browser to be responsive to screen width -->
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+ -->
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/public/adminLTE/bower_components/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
