--- a/app/view/sellTaskPost.ejs
+++ b/app/view/sellTaskPost.ejs
@@ -7,26 +7,31 @@
     <title>试用平台 | 发布产品</title>
     <!-- Tell the browser to be responsive to screen width -->
     <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+<!--     <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css"> -->
+
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/public/css/font-awesome.min.css">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="/public/css/ionicons.min.css">
     <!-- daterange picker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="/public/css/daterangepicker.css">
     <!-- bootstrap datepicker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-datepicker.min.css">
     <!-- iCheck for checkboxes and radio inputs -->
-    <link rel="stylesheet" href="/public/adminLTE/plugins/iCheck/all.css">
+    <link rel="stylesheet" href="/public/css/all.css">
     <!-- Bootstrap Color Picker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-colorpicker.min.css">
     <!-- Bootstrap time Picker -->
-    <link rel="stylesheet" href="/public/adminLTE/plugins/timepicker/bootstrap-timepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-timepicker.min.css">
     <!-- Select2 -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/select2/dist/css/select2.min.css">
+    <link rel="stylesheet" href="/public/css/select2.min.css">
     <!-- Theme style -->
-    <link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="/public/adminLTE/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="/public/css/AdminLTE.min.css">
+    <link rel="stylesheet" href="/public/css/_all-skins.min.css">
+
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
     <script src="/public/js/main.js"></script>
     <script>
