--- a/app/view/sellTaskPost.ejs
+++ b/app/view/sellTaskPost.ejs
@@ -12,24 +12,24 @@
     <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/public/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/public/css/font-awesome.min.css" rel="stylesheet">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="/public/css/ionicons.min.css">
+    <link rel="stylesheet" href="/public/css/ionicons.min.css" rel="stylesheet">
     <!-- daterange picker -->
-    <link rel="stylesheet" href="/public/css/daterangepicker.css">
+    <link rel="stylesheet" href="/public/css/daterangepicker.css" rel="stylesheet">
     <!-- bootstrap datepicker -->
-    <link rel="stylesheet" href="/public/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-datepicker.min.css" rel="stylesheet">
     <!-- iCheck for checkboxes and radio inputs -->
-    <link rel="stylesheet" href="/public/css/all.css">
+    <link rel="stylesheet" href="/public/css/all.css" rel="stylesheet">
     <!-- Bootstrap Color Picker -->
-    <link rel="stylesheet" href="/public/css/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-colorpicker.min.css" rel="stylesheet">
     <!-- Bootstrap time Picker -->
-    <link rel="stylesheet" href="/public/css/bootstrap-timepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrap-timepicker.min.css" rel="stylesheet">
     <!-- Select2 -->
-    <link rel="stylesheet" href="/public/css/select2.min.css">
+    <link rel="stylesheet" href="/public/css/select2.min.css" rel="stylesheet">
     <!-- Theme style -->
-    <link rel="stylesheet" href="/public/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="/public/css/_all-skins.min.css">
+    <link rel="stylesheet" href="/public/css/AdminLTE.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/_all-skins.min.css" rel="stylesheet">
 
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
