--- a/app/view/sellTaskCommentManager.ejs
+++ b/app/view/sellTaskCommentManager.ejs
@@ -4,28 +4,29 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>试用平台 | 试用点评</title>
-    <!-- Tell the browser to be responsive to screen width -->
-    <!-- Bootstrap 3.3.7 -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="/public/css/fontawesomemin.css" rel="stylesheet">
     <!-- Ionicons -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/Ionicons/css/ionicons.min.css">
+    <link rel="stylesheet" href="/public/css/ioniconsmin.css" rel="stylesheet">
     <!-- daterange picker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-daterangepicker/daterangepicker.css">
+    <link rel="stylesheet" href="/public/css/daterangepicker.css" rel="stylesheet">
     <!-- bootstrap datepicker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrapdatepickermin.css" rel="stylesheet">
     <!-- iCheck for checkboxes and radio inputs -->
-    <link rel="stylesheet" href="/public/adminLTE/plugins/iCheck/all.css">
+    <link rel="stylesheet" href="/public/css/all.css" rel="stylesheet">
     <!-- Bootstrap Color Picker -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstrapcolorpickermin.css" rel="stylesheet">
     <!-- Bootstrap time Picker -->
-    <link rel="stylesheet" href="/public/adminLTE/plugins/timepicker/bootstrap-timepicker.min.css">
+    <link rel="stylesheet" href="/public/css/bootstraptimepickermin.css" rel="stylesheet">
     <!-- Select2 -->
-    <link rel="stylesheet" href="/public/adminLTE/bower_components/select2/dist/css/select2.min.css">
+    <link rel="stylesheet" href="/public/css/select2min.css" rel="stylesheet">
     <!-- Theme style -->
-    <link rel="stylesheet" href="/public/adminLTE/dist/css/AdminLTE.min.css">
-    <link rel="stylesheet" href="/public/adminLTE/dist/css/skins/_all-skins.min.css">
+    <link rel="stylesheet" href="/public/css/AdminLTEmin.css" rel="stylesheet">
+    <link rel="stylesheet" href="/public/css/allskinsmin.css" rel="stylesheet">
+
+
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="/public/css/sellTaskManager.css">
     <link rel="stylesheet" href="/public/css/widget.css">
