--- a/app/view/sellLogin.ejs
+++ b/app/view/sellLogin.ejs
@@ -5,7 +5,7 @@
 <title>折试试 | Login</title>
 
 <link href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="/public/css/Adminlte.min.css">
+<link rel="stylesheet" href="/public/css/AdminLTEmin.css">
 <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 
 <script>
